--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,47 @@
-.navbar {
-  border-radius: 0;
-  margin-bottom: 0;
+/* Generale */
+
+.bg_dark {
+  background-color: #2C3E50;
 }
 
-.hero-content {
+.btn_aqua {
+  background-color: #1ABC9C;
+  color: #fff;
+}
+
+.list_inline {
+  display: inline-block;
+}
+
+.header_top {
+  height: 100px;
+  font-family: 'Montserrat', sans-serif;
+  line-height: 100px;
+}
+
+.header_top #brand {
+  font-size: 28px;
+}
+
+.header_top a {
+  font-weight: 700;
+  color: #fff;
+  text-decoration: none;
+}
+
+.header_top .main_menu li:not(:first-child) {
+  margin-left: 40px;
+}
+
+.header_top .main_menu a {
+  font-size: 16px;
+}
+
+.header_top .main_menu a:hover {
+  color: #1ABC9C;
+}
+
+.hero_content {
   height: 500px;
   width: 100%;
   background-color: #ddd;
@@ -13,7 +51,7 @@ section h2 {
   text-align: center;
 }
 
-.portfolio-item {
+.portfolio_item {
   height: 300px;
   width: 100%;
   max-width: 500px;
@@ -35,30 +73,36 @@ section h2 {
   margin: 30px auto 0;
 }
 
-#footer-top, #footer-bottom {
+#footer_top, #footer_bottom {
   padding: 30px 0;
   background-color: #666;
   text-align: center;
 }
 
-.footer-column {
+.footer_column {
   height: 200px;
   width: 100%;
   background-color: #ddd;
 }
 
-#footer-bottom {
+#footer_bottom {
   color: #fff;
   background-color: #333;
 }
 
 @media screen and (max-width: 768px) {
-.about-text {
+.about_text {
   padding: 0 40px 30px;
 }
 
-.footer-column {
+.footer_column {
   margin-bottom: 20px;
 }
 
+}
+
+@media screen and (max-width:992px) {
+  .header_top #brand {
+    font-size: 20px;
+  }
 }
