--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,15 @@
 /* Generale */
+body {
+  font-family: 'Lato';
+  font-weight: 400!important;
+}
 
 .bg_dark {
   background-color: #2C3E50;
+}
+
+.bg_aqua {
+  background-color: #1ABC9C;
 }
 
 .btn_aqua {
@@ -13,9 +21,33 @@
   display: inline-block;
 }
 
+.icon_separator {
+  font-size: 32px;
+  margin: 20px 30px 30px;
+}
+
+.icon_separator::before, .icon_separator::after {
+  content:"";
+  display: inline-block;
+  height: 4px;
+  width: 110px;
+  background-color: #fff;
+  border-radius: 5px;
+  vertical-align: middle;
+}
+
+.header_top, .hero_content h1, section h2 {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+header {
+  color: #fff;
+}
+
 .header_top {
   height: 100px;
-  font-family: 'Montserrat', sans-serif;
   line-height: 100px;
 }
 
@@ -41,10 +73,21 @@
   color: #1ABC9C;
 }
 
-.hero_content {
-  height: 500px;
-  width: 100%;
-  background-color: #ddd;
+.hero {
+  padding: 80px 0;
+}
+
+.hero_content h1 {
+  font-size: 64px;
+}
+
+.hero_content p {
+  font-weight: 400;
+  font-size: 25px;
+}
+
+.hero_content img {
+  height: 250px;
 }
 
 section h2 {
@@ -57,10 +100,6 @@ section h2 {
   max-width: 500px;
   margin: 0 auto 20px;
   background-color: #ddd;
-}
-
-#about, .jumbotron {
-  background-color: #666;
 }
 
 #about {
@@ -102,7 +141,20 @@ section h2 {
 }
 
 @media screen and (max-width:992px) {
+
+  .icon_separator::before, .icon_separator::after {
+    width: 80px;
+  }
+
   .header_top #brand {
+    font-size: 20px;
+  }
+
+  .hero_content h1 {
+    font-size: 44px;
+  }
+
+  .hero_content p {
     font-size: 20px;
   }
 }
