--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,14 @@ body {
   font-weight: 400!important;
 }
 
+.t_dark {
+  color: #2C3E50;
+}
+
+.t_white {
+  color: #fff;
+}
+
 .bg_dark {
   background-color: #2C3E50;
 }
@@ -31,9 +39,16 @@ body {
   display: inline-block;
   height: 4px;
   width: 110px;
-  background-color: #fff;
   border-radius: 5px;
   vertical-align: middle;
+}
+
+.dark_line::before, .dark_line::after {
+  background-color: #2C3E50;
+}
+
+.white_line::before, .white_line::after {
+  background-color: #fff;
 }
 
 .header_top, .hero_content h1, section h2 {
@@ -42,11 +57,30 @@ body {
   text-transform: uppercase;
 }
 
+section {
+  padding: 60px 0;
+}
+
+section h2 {
+  font-size: 48px;
+  text-align: center;
+  color: #fff;
+}
+
+section:nth-child(odd) h2 {
+  color: #2C3E50;
+}
+
 header {
   color: #fff;
 }
 
 .header_top {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
   height: 100px;
   line-height: 100px;
 }
@@ -74,6 +108,7 @@ header {
 }
 
 .hero {
+  margin-top: 100px;
   padding: 80px 0;
 }
 
@@ -90,16 +125,14 @@ header {
   height: 250px;
 }
 
-section h2 {
-  text-align: center;
-}
-
 .portfolio_item {
-  height: 300px;
-  width: 100%;
-  max-width: 500px;
   margin: 0 auto 20px;
   background-color: #ddd;
+}
+
+.portfolio_item img {
+  width: 100%;
+  border-radius: 10px;
 }
 
 #about {
@@ -144,6 +177,10 @@ section h2 {
 
   .icon_separator::before, .icon_separator::after {
     width: 80px;
+  }
+
+  section h2 {
+    font-size: 36px;
   }
 
   .header_top #brand {
