--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,12 @@
 /* Generale */
 body {
   font-family: 'Lato';
-  font-weight: 400!important;
+  font-size: 20px;
+}
+
+.wrapper {
+  max-width: 750px;
+  margin: 0 auto;
 }
 
 .t_dark {
@@ -23,6 +28,13 @@ body {
 .btn_aqua {
   background-color: #1ABC9C;
   color: #fff;
+}
+
+.btn_transparent {
+  padding: 18px 30px;
+  font-size: 20px;
+  background: none;
+  border: 2px solid #fff;
 }
 
 .list_inline {
@@ -135,14 +147,8 @@ header {
   border-radius: 10px;
 }
 
-#about {
-  padding: 40px 0;
-  color: #fff;
-}
-
 #about button {
-  display: block;
-  margin: 30px auto 0;
+  margin-top: 40px;
 }
 
 #footer_top, #footer_bottom {
