--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 /* Generale */
+
 body {
   font-family: 'Lato';
   font-size: 20px;
@@ -86,6 +87,8 @@ section:nth-child(odd) h2 {
   color: #2C3E50;
 }
 
+/* Header */
+
 header {
   color: #fff;
 }
@@ -140,9 +143,10 @@ header {
   height: 250px;
 }
 
+/* Sezione Portfolio */
+
 .portfolio_item {
   margin: 0 auto 20px;
-  background-color: #ddd;
 }
 
 .portfolio_item img {
@@ -150,9 +154,13 @@ header {
   border-radius: 10px;
 }
 
+/* Sezione About */
+
 #about button {
   margin-top: 40px;
 }
+
+/* Sezione Contact */
 
 #contact input, #contact textarea {
   padding: 50px 0;
@@ -163,6 +171,8 @@ header {
   box-shadow: none;
   resize: none;
 }
+
+/* Footer */
 
 #footer_top {
   padding: 60px 0;
@@ -187,6 +197,18 @@ header {
   width: 50px;
   border: 2px solid #fff;
   border-radius: 50%;
+  transition: background-color 0.3s;
+}
+
+#footer_top li:hover {
+  background-color: #fff;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+#footer_top .footer_social li:hover a {
+  color: #2C3E50;
+  transition: color 0.3s;
 }
 
 #footer_top li:not(:first-child) {
@@ -199,6 +221,7 @@ header {
   left: 50%;
   transform: translate(-50%,-50%);
   color: #fff;
+  transition: color 0.3s;
 }
 
 #footer_top a {
@@ -207,19 +230,33 @@ header {
 
 #footer_bottom {
   color: #fff;
-  background-color: #333;
+  background-color: #1A252F;
 }
+
+#footer_bottom p {
+  padding: 30px 0;
+  margin: 0;
+  font-size: 12px;
+}
+
+/* MEDIA QUERY */
+
+/* Mobile */
 
 @media screen and (max-width: 768px) {
 .about_text {
   padding: 0 40px 30px;
 }
 
-.footer_column {
-  margin-bottom: 20px;
+.portfolio_item img {
+  display: block;
+  max-width: 400px;
+  margin: 0 auto;
 }
 
 }
+
+/* Tablet */
 
 @media screen and (max-width:992px) {
 
