--- a/css/style.css
+++ b/css/style.css
@@ -219,37 +219,25 @@ header {
   padding: 0;
 }
 
-#footer_top li {
-  position: relative;
-  height: 50px;
-  width: 50px;
-  border: 2px solid #fff;
-  border-radius: 50%;
-  transition: background-color 0.3s;
-}
-
-#footer_top li:hover {
-  background-color: #fff;
-  cursor: pointer;
-  transition: background-color 0.3s;
-}
-
-#footer_top .footer_social li:hover a {
-  color: #2C3E50;
-  transition: color 0.3s;
-}
-
 #footer_top li:not(:first-child) {
   margin-left: 15px;
 }
 
 #footer_top .footer_social li a {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
+  display: inline-block;
+  height: 50px;
+  width: 50px;
+  line-height: 50px;
+  border: 2px solid #fff;
+  border-radius: 50%;
   color: #fff;
-  transition: color 0.3s;
+  transition: color 0.3s, background-color 0.3s;
+}
+
+#footer_top .footer_social li a:hover {
+  color: #2C3E50;
+  background-color: #fff;
+  transition: color 0.3s, background-color 0.3s;
 }
 
 #footer_top a {
